update animation at home page

--- a/contents/projects/hudy.com.mdx
+++ b/contents/projects/hudy.com.mdx
@@ -1,15 +1,17 @@
 ---
 title: hudy9x.com
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
+description: My personal website that logs my travel
+repository: hudy9x/hudy9x.com
+url: https://hudy9x.com
+date: 2024-02-13
 published: true
 ---
 
+Like others, here is my public project gallary where I show up works/projects. 
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
+But I am not good at design so this site based on [chronark.com](https://chronark.com). You guys can checkout his [repo](https://github.com/chronark/chronark.com). 
 
-If you like the design, check out the Repository on GitHub.
+If you love my custom, checkout my repo above.
+
 
 
