--- a/contents/projects/keyreader.mdx
+++ b/contents/projects/keyreader.mdx
@@ -1,15 +1,23 @@
 ---
 title: keyreader
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
+description: Open source keystroke application for Windows that inspired by Keycast
+repository: hudy9x/keyreader
+url: https://hudy9x.github.io/keyreader/
+date: 2023-11-05
 published: true
 ---
 
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
+## A simple keystroke application for Windows
 
-If you like the design, check out the Repository on GitHub.
+Initial, i was looking for a keystroke application for a few weeks. But nothing has a goood UI. By that time, I learned a new tool that helps Web developer to build a desktop application. 
+
+So, I wondering why did i build my own keystroke app ?. And after a few months study I decided to start building it.
+
+![](/projects/keyreader.png)
+
+The UI inspired by KeyCasts - a beautiful keystroke application on MacOS. The idea was to watch user's typing actions and displays keystroke on the app.
+
+This is an open-source application. Feel free to fork it to create your own version or contribute new features and bug fixes to my repository. I would love to learn from you all!
 
 
