--- a/contents/projects/kompad.mdx
+++ b/contents/projects/kompad.mdx
@@ -1,15 +1,16 @@
 ---
 title: kompad
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
+description: A beautiful app that allows you to create, edit, synchonize your techinal document. Even custom your own look
+repository: hudy9x/kompad
+url: https://kompad.app
+date: 2024-02-04
 published: true
 ---
 
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
+## Stunning text editor for developer
 
-If you like the design, check out the Repository on GitHub.
+A beautiful app that allows you to create, edit, synchonize your techinal document. Even custom your own look
+
 
 
