--- a/contents/projects/namviek.mdx
+++ b/contents/projects/namviek.mdx
@@ -1,15 +1,23 @@
 ---
 title: namviek
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
+description: Namviek is a simple and open-source task manager designed specifically for the needs of developers. It offers a variety of features to help you stay organized and productive
+repository: hudy9x/namviek
+url: https://nameviek.com
+date: 2024-02-14
 published: true
 ---
 
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
+## Namviek: The Open-Source Task Manager Built for Developers
 
-If you like the design, check out the Repository on GitHub.
+Namviek is a simple and open-source task manager designed specifically for the needs of developers. It offers a variety of features to help you stay organized and productive, including:
+
+- Multiple views: See your tasks in different ways, such as a board, list, calendar, or dashboard, to find what works best for you.
+- Google authentication: Sign in securely with your Google account for easy access and data synchronization.
+- Custom statistics: Track your progress and identify areas for improvement with built-in statistics.
+
+Whether you're a solo developer or working on a team, Namviek can help you streamline your workflow and get things done.
+
+
 
 
