--- a/contents/projects/1office.mdx
+++ b/contents/projects/1office.mdx
@@ -1,26 +1,10 @@
 ---
-title: highstorm.app
-description: Simple, fast, open source custom event tracking
+title: 1office.vn
+description: An All-in-one solution that helps Vietnam SMEs run their business on cloud
 date: "2023-05-01"
-url: https://highstorm.app
+url: https://1office.vn
 published: true
-repository: "chronark/highstorm"
   
 ---
 
-
- [![](https://highstorm.app/og.png)](https://highstorm.app) 
-
-Reduce the noise in your Slack workspace by consolidating all your event data into one place, filtering alerts by relevance, and customizing your alert settings to suit your needs.
-
-###### Consolidate Events
-Get all your event data in one place to reduce alert noise
-
-###### Stay Focused
-Keep your Slack workspace focused on what's important
-
-###### Customizable Settings
-Customize your alert settings to suit your unique needs
-
-###### Clear Overview
-Get a clear overview of all your alerts in one place
+My journey started on 1office.vn
