refactor: update project page and 1office content

--- a/contents/projects/1office.mdx
+++ b/contents/projects/1office.mdx
@@ -1,6 +1,6 @@
 ---
 title: 1office.vn
-description: An All-in-one solution that helps Vietnam SMEs run their business on cloud
+description: This is the first company I have worked for since starting my programming journey. Their main product is 1office - an AIO management solution - helping Vietnamese SMEs easily manage and operate their work on the cloud.
 date: "2023-05-01"
 url: https://1office.vn
 published: true
