--- a/contents/projects/namviek.mdx
+++ b/contents/projects/namviek.mdx
@@ -2,7 +2,7 @@
 title: namviek
 description: Namviek is a simple and open-source task manager designed specifically for the needs of developers. It offers a variety of features to help you stay organized and productive
 repository: hudy9x/namviek
-url: https://nameviek.com
+url: https://www.namviek.com
 date: 2024-02-14
 published: true
 ---
